# DataARCodex

./: .gitignore  Cargo.toml  DEVELOPMENT.md  MODULE_IDEAS.md  PROJECT_STRUCTURE.md  README.md  config.json  install.ps1  installer-main.ps1  launcher.ps1  uninstall.ps1  啟動工具包.bat
.github/workflows/: release.yml
core/: module-loader.ps1  ui-framework.ps1
modules/example/: README.md  main.ps1  module.json
modules/template/: README.md  main.ps1  module.json
shared/: utils.ps1
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
