[package]
name = "password_unlocker_gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
password_recovery_rust = { path = ".." }
rfd = "0.17.2"
